<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
  /**
   * Run the migrations.
   */
  public function up(): void
  {
    Schema::create('chapters', function (Blueprint $table) {
      $table->id();
      $table->foreignId('section_id')->constrained()->cascadeOnDelete();
      $table->string('title');
      $table->integer('order');
      $table->text('content');
      $table->timestamps();
    });
  }

  /**
   * Reverse the migrations.
   */
  public function down(): void
  {
    Schema::dropIfExists('chapters');
  }
};
